List keywords in lakefile This will show up on Reservoir.

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,4 +1,5 @@
 name = "ForbiddenMatrix"
+keywords = ["math", "combinatorics", "extremal-combinatorics", "forbidden-matrix-theory"]
 defaultTargets = ["ForbiddenMatrix"]
 
 [leanOptions]
