--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,10 +5,10 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "90c0e186fd333cbdddbe0e5148aa3cd2d24dcf9a",
+   "rev": "1964d7e7fcbe22dcac8e1c83ee9d912e7ac73c89",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v4.23.0-rc2",
+   "inputRev": null,
    "inherited": false,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
@@ -55,7 +55,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "523c8ee53f7057447fc62ec14e506fda4cf63dfa",
+   "rev": "3b779e9d1c73837a3764d516d81f942de391b6f0",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
